2004-12-15 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* sigevent.c: (trap_default_signals) Ignore SIGPIPE instead of exiting.

2004-12-10 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
	
	* log.c: (zlog_signal,_zlog_assert_failed) Change logging level back to
	  LOG_ERR instead of LOG_EMERG.

2004-12-09 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* log.c: (hex_append) No need to include this function if
	  HAVE_GLIBC_BACKTRACE is not defined.

2004-12-08 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* prefix.c: (prefix_copy) Error message before abort should
	  have severity LOG_ERR, not LOG_INFO.
	* memory.c: (mtype_log) Log level should be LOG_DEBUG, not LOG_INFO.

2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* {smux.c,zclient.c}: Change level of debug messages to LOG_DEBUG.

2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* command.c: (config_write_host) Note that "log trap" is deprecated
	  when writing out the config.

2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* log.h: Replace struct zlog flags and maskpri fields with maxlvl
	  array to support individual logging levels for each destination.
	  Remove the 2nd argument to openzlog since the default logging config
	  should be standardized inside the library.  Replaced the
	  zlog_set_flag and zlog_reset_flag functions with zlog_set_level.
	  And zlog_set_file now requires an additional log_level argument.
	  Declare zlog_proto_names for use inside command.c in the
	  "show logging" command.  Added defines useful for command
	  construction.
	* log.c: (vzlog) Decide where to send the message based on the
	  individual logging levels configured for each destination.
	  Remove support for ZLOG_STDERR since it was never actually used.
	  Support record-priority for terminal monitors.
	  (zlog_signal,zlog_backtrace_sigsafe) Support destination-specific
	  logging levels.  Remove stderr support (was never used).  Added